--- a/rater/Download/Download.css
+++ b/rater/Download/Download.css
@@ -7,22 +7,22 @@ html{
 	position: fixed;
 	top: 0; bottom: 0;
 	left: 0; right: 0;
-	width: 50%;
-	height: 60%;
+	width: 750px;
+	height: 450px;
 	margin: auto;
 	background-color:white;
 	display: none;
-	border-radius: 10px;
 	text-align: center;
-	border: solid 1px black;
+	border: 1px solid rgba(194, 194, 194, 1);
 }
-
+.btnFechar{cursor: pointer;}
 .popup .btnFechar{
+	color: white;
 	position: absolute;
 	right: -10px;
 	top: -10px;
 	z-index: 5;
-	background-color: red;
+	background-color: #FE2E2E;
 	width: 25px;
 	height: 25px;
 	border-radius: 100px;
@@ -34,9 +34,10 @@ html{
 	background-color: #4169E1;
 	text-align: center;
 	padding-top: 2%;
-	border-radius: 10px;
+	color: white;
 }
-
+.t1{font-size: 2.8em;}
+.t2{font-size: 1.8em;}
 
 .titulo{
 	font-size: 30px;
@@ -45,23 +46,50 @@ html{
 	margin: 0 auto;
 }
 .lbl{
-	width: 40%;
+	color: gray;
+	font-size: 2.2em;
 	display: inline-block;
+	margin-bottom: 18px;
+	width: 200px;
+}
+.txt{
+	font-size: 2.2em;
+	border-radius: 5px;
+	border: 1px solid rgba(194, 194, 194, 1);
 }
 .formulario{
 	background-color:transparent;
 	font-family: "Arial";
-	font-size: 19px;
 	width: 70%;
-	margin: 15% auto;
+	margin-top: 40px;
 	display: inline-block;
-	margin-bottom: 15%;
+
+}
+.btnCadastrar{
+	font-size: 2.0em;
+	width: 25%;
+	padding: 10px;
+	color: #4171c0;
+	border: 2px solid #4171c0;
+	background-color: white;
+	cursor: pointer;
+}
+
+.btnCadastrar:hover{
+	background-color: #4171c0;
+	color: white;
+
 }
 
 .menu{
 	z-index: 2;
 	font-size: 1.6em;
 }
+
+
+
+
+
 /*primeira parte do site*/
 .Planos{
 	width: 100%;
@@ -316,7 +344,7 @@ html{
 	}
 
 }
-@media(max-width:900px ){
+@media(max-width:900px){
 	.planLateraisR, .planLateraisL, .planCentro {
 		width:80%;
 		text-align: center;
@@ -324,11 +352,70 @@ html{
 		background-size: 100% 40%;
 
 	}
+
+
+	.popup{
+		width: 85%;
+		margin-left: 7.5%;
+		margin-right: 7.5%;
+		height: 550px;
+	}
+	
+	.t1{font-size: 2.0em;}
+	.t2{font-size: 1.4em;}
+
+	.titulo{
+		font-size: 15px;
+		font-family: "Arial";
+		background-color: transparent;
+		margin: 0 auto;
+	}
 	.lbl{
-		width: auto;
+		clear: both;	
+		font-size: 1.6em;
+		display: inline-block;
+		width: 100%;
+		margin: 5px;
+	}
+	.txt{
 
-}
+		clear: both;
+		width: 80%;
+		margin-bottom:10px;
+		font-size: 2.0em;
+		border-radius: 5px;
+		border: 1px solid rgba(194, 194, 194, 1);
+	}
+	.formulario{
+		font-family: "Arial";
+		width: 100%;
+		margin-top: 40px;
+		
+	}
+	.btnCadastrar{
+		font-size: 2.0em;
+		width: 30%;
+		padding: 10px;
+		color: #4171c0;
+		border: 2px solid #4171c0;
+		background-color: white;
+		cursor: pointer;
+	}
 
+	.btnCadastrar:hover{
+		background-color: #4171c0;
+		color: white;
+
+	}
+
+	.tituloContainer{
+		width: 100%;
+		height: 70px;
+		background-color: #4169E1;
+		text-align: center;
+		padding-top: 2%;
+		color: white;
+	}
 
 
 }
