--- a/rater/PaginaInicial/styleContent.css
+++ b/rater/PaginaInicial/styleContent.css
@@ -19,9 +19,9 @@
 }
 .intro{
 	opacity: 0;
-  	transform: translate3d(-500px,0px,0);
-  	transition: 1.5s;
-	padding-top: 200px;
+  transform: translate3d(-500px,0px,0);
+  transition: 1.5s;
+	margin-top: 13.58%;
 	margin-left: 10%;
 	float: left;
 }
@@ -31,16 +31,17 @@
 }
  .tituloGG{
  	color:white;
- 	font-size: 5.5em;
+ 	font-size: 7.2em;
  }
  .iconDown{
 	opacity: 0;
 	transition: 1.5s;
-	 width:	38.60%;
+	 max-width: 100%;
+	 height:auto;
 	 transform: translate3d(0,500px,0);
 	 float:	left;
 	 margin-left: 19.37%;
-	 padding-top: 9.80%;
+	 margin-top: 13.58%;
  }
  .icone-Start{
  	transform: translate3d(0,0,0);
@@ -62,6 +63,8 @@
 	width: 48%;
 	border: 2px solid white;
 	font-size: 16px;
+	position: relative;
+	transition: 400ms;
 }
 
 .btnSaibaMais{
@@ -69,10 +72,12 @@
 
 }
 .btnDownload:hover, .btnSaibaMais:hover{
-	cursor: pointer;
 	background-color: #4171c0;
+	transition: 0.5s;
+	cursor: pointer;
 	color: white;
 	border: 2px solid #4171c0;
+
 }
 
 
@@ -137,13 +142,23 @@
 
 /*---------------------------------------------------------------------*/
 
+@media(max-width: 1182px){
+	.iconDown{
+		margin-left: 9%;
 
+	}
+	.intro{
+		margin-left: 5%;
+	}
+}
 
 
 
 @media(max-width: 900px){
 	.tituloGG{
 		width: 100%;
+		margin-top: 100px;
+		margin-left: 25%
 	}
 	.freature{
 		height: 100vh ;
