--- a/rater/SobreSoftware/SoftwareCSS.css
+++ b/rater/SobreSoftware/SoftwareCSS.css
@@ -93,8 +93,7 @@ p{
 }
 
 .titulo1{
-	padding-left: 15%;
-	font-size: 3.8em;
+	padding-left: 12.5%;
 	color: #3165aa;
 }
 .texto1{
@@ -216,3 +215,7 @@ p{
 	}
 
 }
+
+.vactli{
+		left:10% ;
+	}
