--- a/rater/Download/Download.css
+++ b/rater/Download/Download.css
@@ -8,7 +8,7 @@ html{
 	top: 0; bottom: 0;
 	left: 0; right: 0;
 	width: 750px;
-	height: 550px;
+	height: 500px;
 	margin: auto;
 	background-color:white;
 	display: none;
@@ -31,7 +31,7 @@ html{
 .tituloContainer{
 	width: 100%;
 	height: 15%;
-	background-color: #4169E1;
+	background-color: #437fd2;
 	text-align: center;
 	padding-top: 2%;
 	color: white;
