--- a/rater/QuemSomos/SobreNosCSS.css
+++ b/rater/QuemSomos/SobreNosCSS.css
@@ -1,14 +1,14 @@
 ﻿
 /*primeira parte do site*/
 .part1{
-	height: 100vh;
-	background-image: url(imgsPagina/teste.png);
+	height: 110vh;
+	background-image: url(imgsPagina/fundinho.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 	
 }
 .intro{
-	width: 50%;
+	width: 40%;
 	opacity: 0;
   	transform: translate3d(-500px,0px,0);
   	transition: 1.5s;
@@ -21,8 +21,7 @@
  	font-size: 6.2em;
  }
 .icone{
-	opacity:0;
-	width: 30%;
+	width: 40%;
 	text-align: center;
 	transform: translate3d(0,500px,0);
 	transition: 1.5s;
@@ -63,7 +62,6 @@
 	clear: both;
 	margin-top: 120px;
 	margin-left: 10%;
-	
 }
 .mvvbox{
 	width: 26.6%;
@@ -86,6 +84,7 @@
 	font-size: 2.2em;
 	color:gray;
 	text-align: none;
+	padding-bottom: 60px;
 }
 
 
@@ -179,10 +178,21 @@
 }
 
 
+
+@media (max-width: 1150px) {
+	.intro{
+		width: 80%;
+	}
+	.icone{
+		display: none;
+	}
+
+}
+
 @media (max-width: 900px) {
 	.part1{
 		height: 100vh;
-		background-image: url(imgsPagina/teste3res.png);
+		background-image: url(imgsPagina/fundinho.png);
 		background-repeat: no-repeat;
 		background-size: cover;
 		margin-top: 0;
